poritt/examples/errors/error-arr-not-u.ptt
define foo : (forall (x : U) -> U) = U -> U
